fixed spacing (#10)

--- a/456-UI-Ux/DyslexiaReader/src/app/form/form.component.scss
+++ b/456-UI-Ux/DyslexiaReader/src/app/form/form.component.scss
@@ -5,10 +5,10 @@
 
 .input-text {
     width: 100%;
-    height: 18em;
+    height: 13em;
 }
 
 .output-text {
     width: 100%;
-    height: 18em;
+    height: 13em;
 }
